--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -108,14 +108,20 @@ img.sticker {
   font-size: 40px;
   padding: 14px;
   margin-top: 1px;
-  border: 2px solid #888;
-  border-radius: 0.2em;
+  border-bottom: 2px solid #420d00;
+  background: none;
+  color: rgba(255,255,255, 0.1);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 #input_text:focus{
   outline: 0;
+  border-bottom: 6px solid #f34223;
+  color: white;
 }
-
 /*INPUT BUTTONS*/
 #speak, #scroll-to-top{
   height: 78px;
