new nav buttons!!

--- a/app/assets/stylesheets/fireball.css
+++ b/app/assets/stylesheets/fireball.css
@@ -41,9 +41,6 @@ audio {
 }
 
 /*CHAT*/
-.sticker{
-}
-
 #audio{
   width: 45px;
   height: 10px;
@@ -86,6 +83,21 @@ audio {
 img.sticker {
   max-height: 10em;
   max-width: 10em;
+}
+
+img.thumb {
+  max-height: 3.2em;
+  max-width: 3.2em;
+}
+
+img.settings_tag{
+  max-height: 3.2em;
+  max-width: 3.2em;
+}
+
+img.login_tag{
+  max-width: 3em;
+  max-height: 3em;
 }
 
 .timestamp {
@@ -155,6 +167,7 @@ img.avatar{
   width: 5em;
   margin-left: 3.5em;
   margin-top: 1em;
+  margin-bottom: 1em;
   border-radius: 100%;
   border: 3px solid black;
   background-color: white;
@@ -174,7 +187,8 @@ nav{
 nav a{
   display: block;
   text-decoration: none;
-  padding-bottom: 1em;
+  padding-bottom: 2em;
+  padding-left: 1.8em;
   color: black;
 }
 
