--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -34,8 +34,10 @@ audio {
 
 .content{
   max-width: 80%;
-  margin-left: 13em;
+  /*width: 40%;*/
+  margin: auto;
   display: inline-block;
+  margin-left: 20%;
 }
 
 /*CHAT*/
@@ -172,14 +174,16 @@ img.login_tag{
 img.avatar{
   height: 5em;
   width: 5em;
-  margin: 1em auto;
+  margin-left: 3.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   border-radius: 100%;
   border: 3px solid black;
   background-color: white;
 }
 
 nav{
-  width: 10em;
+  width: 15%;
   height: 100%;
   position: fixed;
   background-color: #f34223;
@@ -187,12 +191,13 @@ nav{
   border-bottom-style: groove;
   border-color: #776a6a;
   font-family: 'Ubuntu', sans-serif;
-  text-align: center;
 }
 
 nav a{
   display: block;
   text-decoration: none;
+  padding-bottom: 2em;
+  padding-left: 1.8em;
   color: black;
 }
 
@@ -202,13 +207,11 @@ nav a{
 
 nav ul{
   list-style: none;
-  padding: 0;
-  margin-left: 2em;
-  width: 51px;
 }
 
-nav ul div {
-  // background: white;
+nav ul li:nth-child(5n){
+  font-weight: bold;
+  color: black;
 }
 
 nav a:hover{
@@ -220,6 +223,7 @@ nav a:hover{
   perspective: 1000px;
   margin-top: 5em;
   margin-bottom: 5em;
+  /*padding: 1em;*/
 }
 
 /* flip pane when hovered */
@@ -230,6 +234,7 @@ nav a:hover{
 .flip-container, .front, .back{
   width: 110px;
   height: 10px;
+  /*background-color: white;*/
 }
 
 /* flipper speed goes here */
