--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -78,10 +78,10 @@ audio {
   padding: 2em;
 }
 
-#chat_box embed {
+/*#chat_box embed {
   width: 50px;
   height: 80px;
-}
+}*/
 
 img.sticker {
   max-height: 10em;
