--- a/app/assets/stylesheets/chats.css
+++ b/app/assets/stylesheets/chats.css
@@ -40,7 +40,7 @@
   color:#008DBC;
 }
 
-#my_chats ul li:hover > .show_delete_chat{
+#my_chats ul li:hover > form button.show_delete_chat{
   opacity: 100;
 }
 
