--- a/app/views/chats/show.haml
+++ b/app/views/chats/show.haml
@@ -14,7 +14,7 @@
       %li.translation= msg.translation
       %li
         %span.invisible= msg.id
-        %button.play_sound Play
+        %button.play_sound ►
 
 %div#input
   = form_tag "/chats/#{params[:id]}/messages" do
