--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -78,6 +78,45 @@ audio {
   padding: 2em;
 }
 
+#new_chat{
+  font-size: 25px;
+  color: white;
+}
+
+#new_chat input{
+  border-radius: 0.3em;
+  padding: 0.8em;
+  font-size: 18px;
+  width: 50%;
+  background-color: #008DBC;
+  color: white;
+  text-align: center;
+  display: block;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#new_chat input:hover{
+  font-size: 30px;
+  padding: 0.3em;
+  width: 100%;
+  color: black;
+  background-color: #f34223;
+  font-weight: bold;
+}
+
+#new_chat select{
+  min-width: 500px;
+  display: block;
+  padding: .5em 0 .5em 38%;
+  font-size: 30px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 0.5em;
+}
+
 /*#chat_box embed {
   width: 50px;
   height: 80px;
@@ -145,6 +184,8 @@ img.login_tag{
   border-bottom: 6px solid #f34223;
   color: white;
 }
+
+/*END CHAT*/
 /*INPUT BUTTONS*/
 #speak, #scroll-to-top{
   height: 78px;
