--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -19,7 +19,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, p{
   color: #f34223;
 }
 
@@ -30,6 +30,7 @@ h1{
 form {
   min-width: 200px;
 }
+
 
 .formgroup{
   display: block;
