--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -192,7 +192,7 @@ audio {
 #new_chat select{
   /*min-width: 500px;*/
   display: block;
-  /*padding: .8em;*/
+  /*padding-left: 50%;*/
   font-size: 30px;
   margin-top: 1em;
   margin-bottom: 1em;
