Find friend list

--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -31,6 +31,9 @@ form {
   min-width: 200px;
 }
 
+ul {
+  padding: 0;
+}
 
 .formgroup{
   display: block;
@@ -388,6 +391,26 @@ nav a:hover{
 
 /*END NAV
 
+
+/*FRIEND SEARCH*/
+
+#friend_results {
+  color: #f34223;
+}
+
+#friend_results ul {
+  list-style: none;
+}
+
+#friend_results ul li {
+  line-height: 2em;
+  background-color: #ddd;
+  border: 1px solid #f34223;
+}
+
+#friend_results ul li:hover {
+  background-color: #444;
+}
 
 /*GAME*/
 
