--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,1 +1,8 @@
-%h1 This is index
+%script
+  = "var all_users = #{@users.to_json};".html_safe
+%h1 Find friends
+
+= form_tag '/' do
+  = search_field_tag(:user_search)
+  = button_tag('Add friend', :id => '#add_friend_btn')
+%div#friend_results
