--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -361,6 +361,7 @@ nav a {
   padding-bottom: 2em;
   padding-left: 1.8em;
   color: black;
+  font-weight: bold;
 }
 
 .selected{
@@ -372,17 +373,17 @@ nav ul {
 }
 
 nav a:hover{
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 /* entire container, keeps perspective */
 .flip-container{
-  perspective: 1000px;
+  -webkit-perspective: 1000px;
   margin-top: 5em;
   margin-bottom: 5em;
 }
 
 /* flip pane when hovered */
-.flip-container:hover .flipper, .flip-container.hover .flipper{
+.flipper:hover{
   -webkit-transform: rotateY(180deg);
 }
 
@@ -393,22 +394,22 @@ nav a:hover{
 
 /* flipper speed goes here */
 .flipper{
-  -webkit-transition: 0.6s;
-  -webkit-transform-style: preserve3d;
+  -webkit-transition: all 0.6s;
+  -webkit-transform-style: preserve-3d;
   position: relative;
 }
 
 /* hide back of pane during swap */
-.front, .back{
+.flipper div{
   -webkit-backface-visibility: hidden;
   position: absolute;
-  top: 0;
-  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* front pane, placed above back */
 .front{
-  z-index: 2;
+  /*z-index: 2;*/
 }
 
 /* back, initially hidden pane */
