--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -362,6 +362,8 @@ nav a {
   padding-left: 1.8em;
   color: black;
   font-weight: bold;
+  margin-left: 35%;
+  margin-top: -40%;
 }
 
 .selected{
