adding game quetions

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,3 +1,6 @@
+%script
+  = "var questions = #{@questions}".html_safe # THIS NEEDS TO BE IN AJAX AFTER YOU HIT PLAY
+
 %div#word_list
 
 %div#game_window
