--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -396,7 +396,7 @@ nav a:hover{
 
 /* flipper speed goes here */
 .flipper{
-  -webkit-transition: all 0.6s;
+  -webkit-transition: all .6s;
   -webkit-transform-style: preserve-3d;
   position: relative;
 }
@@ -426,22 +426,58 @@ nav a:hover{
 /*FRIEND SEARCH*/
 
 #friend_results {
-  color: #f34223;
+  /*color: #f34223;*/
 }
 
 #friend_results ul {
-  list-style: none;
+  /*list-style: none;*/
 }
 
-#friend_results ul li {
+/*#friend_results ul li {
   line-height: 2em;
   background-color: #ddd;
   border: 1px solid #f34223;
-}
+}*/
 
 #friend_results ul li:hover {
   background-color: #444;
 }
 
-/*GAME*/
+/*USER*/
+
+#user_search{
+  min-width: 500px;
+  display: block;
+  font-size: 30px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 0.5em;
+}
+
+#ui_menu_item{
+  color: white;
+}
+
+#add_friend_btn{
+  border-radius: 0.3em;
+  padding: 0.5em;
+  font-size: 18px;
+  width: 40%;
+  background-color: #008DBC;
+  color: white;
+  text-align: center;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#add_friend_btn:hover{
+  font-size: 28px;
+  width: 54.6%;
+  color: black;
+  background-color: #f34223;
+  font-weight: bold;
+  text-align: center;
+}
 
