--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,7 +4,7 @@
 
 = form_tag('/', :id => 'search') do
   = search_field_tag(:user_search)
-  = button_tag('Add friend', :id => '#add_friend_btn')
+  = button_tag('Add friend', :id => 'add_friend_btn')
 
 -# %ul#friends_approved
 -#   - @friends_awaiting_approval.each do |friend|
