--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -10,8 +10,8 @@
   %ul#friends
     - @friends.each do |friend|
       %li= friend.username
-      %li= friend.id
-      %li=# link_to( friend.username, chat_path( Chat.find_by(:user2_id => friend.id) ) )
+      -# %li= friend.id
+      -#%li= link_to( friend.username, chat_path( Chat.find_by(:user2_id => friend.id) ) )
 
 - unless @friend_requests.empty?
   %h3= 'Awaiting approval'
