--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,1 +1,5 @@
-%h1= "Welcome #{ @user.username.upcase }, This is Show page."
+%h1= "Welcome #{ @user.username.upcase }."
+
+%h2 Your best Games:
+- @high_scores.each do |game|
+  %li= "#{LANGUAGES.invert[game.language]} : #{game.points}"
