Add your total points to user page

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,9 @@
 %h1= "Welcome #{ @user.username.upcase }."
 
+%h2= "You have #{@my_total_score} points."
+
 %h2 Your best Games:
 - @high_scores.each do |game|
   %li= "#{LANGUAGES.invert[game.language]} : #{game.points}"
+
+%h2 Top users:
