--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -6,9 +6,10 @@
   width: 100%;
   /*height: 100em;*/
   background: #C9E7EF;
+ /* background-color: #0A1536;*/
   border-radius: 0.7em;
   margin: 0;
-  border: 10px solid #85C2FF;
+  /*border: 10px solid #335CAD;*/
 }
 
 #input.game {
