--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -31,8 +31,6 @@
 .current {
     background: #0099cc;
 }
-
-
 #toolbar {
     background: #f34223;
 
@@ -57,7 +55,7 @@
     color: white;
 }
 
-#lives, #btnplay{
+#lives{
     font-size: 24px;
     padding: 0 3px;
     color: white;
