--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -13,17 +13,20 @@
 }
 
 .animatedbox {
-    background: #ff0084;
+    background: #1C303E;
     position: absolute;
     padding: 8px 20px 12px 15px;
     font-size: 36px;
     color: #ffffff;
-    -webkit-border-radius: 0.5em 2.5em 2.5em 0.5em;
+/*    -webkit-border-radius: 0.5em 2.5em 2.5em 0.5em;
     -moz-border-radius: 0.5em 2.5em 2.5em 0.5em;
-    border-radius: 0.5em 2.5em 2.5em 0.5em;
+    border-radius: 0.5em 2.5em 2.5em 0.5em;*/
     left: 500px;
     letter-spacing: 3px;
     display: none;
+
+    border-radius: 1em;
+    border-bottom-left-radius: 0;
 }
 .match {
     color: #000000;
@@ -70,13 +73,42 @@
 }
 
 #userAnswer {
-    margin-left: 15%;
+    margin-left: 5%;
     margin-bottom: 20%;
 }
 
 #userInput {
-    width: 300px;
+    width: 450px;
+    font-size: 30px;
 
+    padding: 14px;
+    margin-top: 1px;
+    border-bottom: 2px solid #f34223;
+    background: none;
+    color: black;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+#btnsubmit{
+    height: 60px;
+    width: 90px;
+    top: -3px;
+    position: relative;
+    font-size: 20px;
+    border-radius: 0.5em;
+    box-shadow: 1px 2px 0 0;
+    background-color: #f34223;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+#btnsubmit:hover{
+    background-color: #0099cc;
 }
 
 #btnplay{
@@ -210,13 +242,15 @@
     margin-left: 1.5%;
     width: 200px;
     max-width: 20%;
-    max-height: 630px;
+    max-height: 655px;
     overflow: scroll;
+
 }
 
 .answers, #game_window{
     display: inline-block;
     vertical-align: top;
+    margin-bottom: 10%;
 }
 
 .words, #game_window{
