--- a/app/assets/stylesheets/fireball.scss
+++ b/app/assets/stylesheets/fireball.scss
@@ -481,3 +481,12 @@ nav a:hover{
   text-align: center;
 }
 
+@media all and (max-height: 960px) and (max-width: 640px){
+  nav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 3em;
+  }
+
+}
