--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Fireball
+    %meta{content: "width=320", name: "viewport"}/
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
