--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -20,6 +20,7 @@
   %div#container
     %div#ani_container
 
+  %div#progressbar
   %div#userAnswer
     = text_field_tag :userInput, nil, :placeholder => 'Type Your Answer Here!'
     = submit_tag 'Submit', :id => "btnsubmit"
