More about stuff

--- a/app/views/pages/about.haml
+++ b/app/views/pages/about.haml
@@ -2,19 +2,21 @@
 
 %div.about
   %h2 Chat to Fireball in over 50 languages, and it'll translate it back for you!
-  = image_tag('/assets/emoticons/peng.png')
+  %div.about_peng
+    = image_tag('/assets/emoticons/peng.png')
   %p This is Peng the penguin. Peng likes to play when you chat to Fireball.
   %p Test your knowledge by battling Fireball! Pick a language to battle with, and get ready!
 
 
 %div.signup_signin
-  = link_to("Sign up", "#")
-  = link_to("Sign in", "#")
+  = link_to("Sign up", "#", :class => 'formsubmit')
+  = link_to("Sign in", "#", :class => 'formsubmit')
 
 
 %div.us_box
   %div.me_box
-    =image_tag('/assets/emoticons/fireball.png')
+    %div.bio_img
+      =image_tag('/assets/emoticons/happy.png')
     %h3 Rira
     %div.bio
     %ul.links
@@ -22,7 +24,8 @@
         %a{:href => "http://github.com/rirachoi"} rirachoi@GitHub
 
   %div.me_box
-    = image_tag('/assets/emoticons/drunken.png')
+    %div.bio_img
+      = image_tag('/assets/emoticons/smoke.png')
     %h3 Rich
     %div.bio
     %ul.links
@@ -30,7 +33,8 @@
         %a{:href => "http://github.com/toodelirious"} toodelirious@GitHub
 
   %div.me_box
-    =image_tag('/assets/emoticons/peng.png')
+    %div.bio_img
+      =image_tag('/assets/emoticons/fireball.png')
     %h3 Larlyn
     %div.bio
 
@@ -43,15 +47,14 @@
         %a{:href => "http://blog.lynt.co"} My blog
 
 %div.acknowledgements
-  %h6 Icons
-  %ul
-  -# %p Friends by Luis Prado from The Noun Project
-  %li Fire designed by <a href="http://www.thenounproject.com/alanhussey">Alan Hussey</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
-  %li Chat designed by <a href="http://www.thenounproject.com/joe_harrison">Joe Harrison</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
-  %li Gear designed by Joris Hoogendoorn from the Noun Project
-  %li Login designed by Lingailė Žiūkaitė from the Noun Project
-  %li Logout designed by Lingailė Žiūkaitė from the Noun Project
-  %li Sign Up designed by <a href="http://www.thenounproject.com/jenswindolf">Jens Windolf</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+  %h5 Icon credit
+  %ul.icon_credit
+    %li Fire designed by <a href="http://www.thenounproject.com/alanhussey">Alan Hussey</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+    %li Chat designed by <a href="http://www.thenounproject.com/joe_harrison">Joe Harrison</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+    %li Gear designed by <a href="http://www.thenounproject.com/jorishoogendoorn">Joris Hoogendoorn</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+    %li Login designed by <a href="http://www.thenounproject.com/lingaile.ziukaite.9">Lingailė Žiūkaitė</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+    %li Logout designed by <a href="http://www.thenounproject.com/lingaile.ziukaite.9">Lingailė Žiūkaitė</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+    %li Sign Up designed by <a href="http://www.thenounproject.com/jenswindolf">Jens Windolf</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
 
 %footer
-  General Assembly WDI5, June 2014
+  %p General Assembly WDI5, June 2014
