--- a/app/views/pages/about.haml
+++ b/app/views/pages/about.haml
@@ -1,11 +1,11 @@
-%h1 Fireball
+%h1.about Fireball
 
 %div.about
-  %h2 Chat to Fireball in over 50 languages, and it'll translate it back for you!
+  %h2 Play in over 50 languages.
   %div.about_peng
     = image_tag('/assets/emoticons/peng.png')
-  %p This is Peng the penguin. Peng likes to play when you chat to Fireball.
-  %p Test your knowledge by battling Fireball! Pick a language to battle with, and get ready!
+  %h2 Peng the penguin likes to chat!
+  %h2 Test your language skills!
 
 
 %div.signup_signin
@@ -18,7 +18,6 @@
     %div.bio_img
       =image_tag('/assets/emoticons/happy.png')
     %h3 Rira
-    %div.bio
     %ul.links
       %li
         %a{:href => "http://github.com/rirachoi"} rirachoi@GitHub
@@ -27,7 +26,6 @@
     %div.bio_img
       = image_tag('/assets/emoticons/smoke.png')
     %h3 Rich
-    %div.bio
     %ul.links
       %li
         %a{:href => "http://github.com/toodelirious"} toodelirious@GitHub
@@ -36,13 +34,9 @@
     %div.bio_img
       =image_tag('/assets/emoticons/fireball.png')
     %h3 Larlyn
-    %div.bio
-
     %ul.links
       %li
         %a{:href => "http://github.com/lyntco"} lyntco@GitHub
-      %li
-        %a{:href => "http://twitter.com/strawz"} strawz@twitter
       %li
         %a{:href => "http://blog.lynt.co"} My blog
 
