--- a/app/views/pages/about.haml
+++ b/app/views/pages/about.haml
@@ -16,7 +16,7 @@
 %div.us_box
   %div.me_box
     %div.bio_img
-      =image_tag('/assets/emoticons/happy.png')
+      =image_tag('images/emoticons/happy.png')
     %h3 Rira
     %ul.links
       %li
