play button css

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -15,10 +15,13 @@
       %span Score:
       %span#score 0
       %div#boxcontrol
-    =link_to 'Play', "", :id => 'btnplay'
 
   %div#container
     %div#ani_container
+
+  %figure.gamebtn
+    %button#btnplay= "PLAY"
+    %div.btnshadow
 
   %div#progressbar
   %div#userAnswer
