--- a/app/assets/stylesheets/single_game.css
+++ b/app/assets/stylesheets/single_game.css
@@ -296,9 +296,9 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 1em;
     margin-left: 1.5%;
-    margin-top: -13%;
+    margin-top: -15%;
     width: 580px;
-    height: 400px;
+    height: 550px;
     overflow: scroll;
     text-align: center;
 }
@@ -385,6 +385,12 @@
   height: .75rem;
   background: radial-gradient(closest-side, gainsboro, transparent);
   opacity: 0;
+}
+
+#endImg {
+    width: 170px;
+    height: 170px;
+    margin: auto 0;
 }
 
 
